--- a/client-customer/src/App.css
+++ b/client-customer/src/App.css
@@ -128,9 +128,9 @@ span.link {
 
 div.border-bottom {
   height: 130px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid rgb(208, 206, 206);
   padding: 10px;
-  background-color: white;
+  background-color: rgb(217, 217, 217);
 }
 div.float-left {
   float: left;
@@ -142,8 +142,8 @@ div.float-left {
 }
 .float-right {
   display: inline-block;
-  padding-left: 40px;
-  padding-top: 40px;
+  padding-left: 20px;
+  padding-top: 80px;
 }
 .search #search-bar{
     width: 100px;
@@ -196,8 +196,8 @@ li.menu {
   text-transform: uppercase;
 }
 .menu li a {
-  color: #000; /* Màu chữ đen */
-  text-decoration: black;
+  color: #faf5f5; /* Màu chữ đen */
+  text-decoration: rgb(234, 229, 229);
   padding: 10px 20px; /* Khoảng cách giữa các mục */
   font-family: 'sans-serif'; /* Chọn font chữ đẹp */
   transition: all 0.1s ease; /* Hiệu ứng hover mềm mại */
