--- a/client-customer/src/App.css
+++ b/client-customer/src/App.css
@@ -62,7 +62,7 @@ span.link {
   color: white;
   font-weight: bold;
   font-size: 18px;
-  transition: 0.6s ease;
+  transition: 0.9s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
@@ -80,7 +80,7 @@ span.link {
 
 /* Caption text */
 .text {
-  color: #7d7272;
+  color: #e517a4;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -91,7 +91,7 @@ span.link {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: #2fe06d;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -213,11 +213,11 @@ form.search {
   margin: 10px;
 }
 input.keyword {
-  width: 150px;
+  width: 400px;
 }
 /*Footer*/
 .footer{
-  background-color:rgb(0, 0, 0);
+  background-color:rgb(248, 245, 245);
   padding: 0px;
   text-align: left ;
   
