--- a/client-customer/src/App.css
+++ b/client-customer/src/App.css
@@ -153,7 +153,7 @@ div.float-left {
     border-radius: 0px; /* Bo tròn cạnh của input */
     outline: none; /* Loại bỏ đường viền khi focus */
     color: #000000; /* Màu chữ đen */
-    margin-left: 150px;
+    margin-left: 300px;
 }
 .search #button-search{
   width: 80px;
@@ -218,9 +218,12 @@ input.keyword {
 }
 /*Footer*/
 .footer{
+  position: sticky;/*cố định footer*/
+  bottom: 0;
   background-color:rgb(0, 0, 0); /*nền footer*/
   padding: 0px;
   text-align: left ;
+  font-size: 16px; /*cỡ chữ*/
   color: #ffffff /*chữ trong footer*/
 }
 .footer-item img{
