--- a/client-customer/src/App.css
+++ b/client-customer/src/App.css
@@ -9,6 +9,11 @@
   height: fit-content;
   margin: 0px auto;
 }
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
 div.inline {
   display: inline-block;
 }
@@ -216,14 +221,22 @@ form.search {
 input.keyword {
   width: 400px;
 }
+
+.content {
+  min-height: 100%;
+  /* Đảm bảo nội dung trang đủ dài để có thể cuộn */
+}
 /*Footer*/
 .footer{
-  position: sticky;/*cố định footer*/
+  position: fixed;/*cố định footer*/
   bottom: 0;
+  left: 0;
+  width: 100%;
   background-color:rgb(0, 0, 0); /*nền footer*/
   padding: 0px;
   text-align: left ;
-  font-size: 5px; /*cỡ chữ*/
+  padding: 10px 0;
+  font-size: 8px; /*cỡ chữ*/
   color: #ffffff /*chữ trong footer*/
 }
 .footer-item img{
