--- a/client-customer/src/App.css
+++ b/client-customer/src/App.css
@@ -132,7 +132,7 @@ span.link {
 /* menu.css */
 
 div.border-bottom {
-  height: 20  0px;
+  height: 130px;
   border-bottom: 1px solid rgb(0, 0, 0);
   padding: 30px;
   background-color: rgb(173, 173, 173);
