--- a/client-customer/src/App.css
+++ b/client-customer/src/App.css
@@ -9,6 +9,11 @@
   height: fit-content;
   margin: 0px auto;
 }
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
 
 div.inline {
   display: inline-block;
@@ -232,7 +237,7 @@ input.keyword {
   background-color:rgb(0, 0, 0); /*nền footer*/
   padding: 0px;
   text-align: left ;
-  padding: 10px 0;
+  padding: 10px 10;
   font-size: 8px; /*cỡ chữ*/
   color: #ffffff /*chữ trong footer*/
 }
